--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -105,6 +105,9 @@
                     <dt><code>data-wwa-use-go-to-wwa</code>属性</dt>
                     <dd><code>true</code>を指定すると、現在戦闘予測ボタン「Battle Report」が WWA公式サイトへの移動ボタン「GoTo WWA」（v3.1系以下やJava版WWAでのボタン）でに変更できます。
                     指定しなかった場合は<code>false</code>になります。</dd>
+                    <dt><code>data-wwa-auto-rotate-enable</code>属性</dt>
+                    <dd><code>true</code>を指定すると、スマートフォンの自動回転に応じてWWAの画面のサイズを調整します。
+                    指定しなかった場合は<code>true</code>になります。</dd>
                 </dl>
             </section>
 
