--- a/packages/assets/html/dev/wwamap.html
+++ b/packages/assets/html/dev/wwamap.html
@@ -11,24 +11,20 @@
     <!-- /wwa requirements-->
   </head>
   <body class="has-virtualpad">
-    <div id="wwa-virtualpad-left">
-        <div class="virtualpad_move">
-            <button id="wwa-up-button">△</button>
-            <button id="wwa-left-button">◁</button>
-            <button id="wwa-right-button">▷</button>
-            <button id="wwa-down-button">▽</button>
-        </div>
-    </div>
-    <div id="wwa-virtualpad-right">
-        <div class="virtualpad_speedcontrol">
-            <button id="wwa-slow-button">I</button>
-            <button id="wwa-fast-button">P</button>
-        </div>
-        <div class="virtualpad_select">
-            <button id="wwa-enter-button">Y</button>
-            <button id="wwa-esc-button">N</button>
-            <button id="wwa-estimate-button">M</button>
-        </div>
+    <div class="virtualpad_wrapper">
+      <div id="wwa-virtualpad-left">
+        <button id="wwa-up-button">△</button>
+        <button id="wwa-left-button">◁</button>
+        <button id="wwa-right-button">▷</button>
+        <button id="wwa-down-button">▽</button>
+      </div>
+      <div id="wwa-virtualpad-right">
+        <button id="wwa-slow-button">I</button>
+        <button id="wwa-fast-button">P</button>
+        <button id="wwa-enter-button">Y</button>
+        <button id="wwa-esc-button">N</button>
+        <button id="wwa-estimate-button">M</button>
+      </div>
     </div>
     <div id="wrapper">
       <div class="wwa-size-box" id="wwa-wrapper" data-wwa-mapdata="wwamap.dat" data-wwa-loader="wwaload.js" data-wwa-urlgate-enable="true" data-wwa-title-img="cover.gif"></div>
