--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -131,6 +131,10 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                     <h3>v3.2.2からv3.2.3への変更点</h3>
+                    <ul>
+                        <li>開発都合のリリースで、挙動の変更はありません。（wwa.css開発のscssへの移行とリリースの流れの見直しを行いました）</li>
+                    </ul>
                     <h3>v3.2.1からv3.2.2への変更点</h3>
                     <ul>
                         <li><code>$imgframe</code>でアイテムボックスの背景を変更した後、アイテムを取得すると背景が一瞬デフォルトになる問題を修正</li>
