--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -51,7 +51,6 @@
       |  |
       |  +-- 1...69.mp3 - 効果音です。1.mp3と3.mp3はシステムで使用するので必ずアップロードしてください。
       |  +-- 70...98.mp3 - BGMです。アップロードは任意です。
-      |  +-- player-graphics.gif - audio.jsで使用するファイルです。無くても差し支えないですが、念のためアップロードを推奨します。
       |
       +-- wwa.js - wwa本体です。本家のWWA.classに相当します。名前はHTML中のscript要素で変更できます。
       +-- wwaload.js - wwa.jsから起動するマップデータのローダです。名前は「起動するには」で紹介する「data-wwa-loader」属性で変更できます。
@@ -94,8 +93,7 @@
                     <dd>起動時に表示されるタイトル画像を指定できます(形式: GIF, JPEG, PNGのいずれか, サイズ:横560ピクセル*縦440ピクセル。ただし下の16ピクセル分はステータスバーに隠されます。 )。
                     指定しなかった場合は本家を再現した白のローディング画面が使われます。</dd>
                     <dt><code>data-wwa-audio-dir</code>属性</dt>
-                    <dd>audio.min.jsと効果音ファイルが入っているフォルダを指定できます。ここを変更した場合は, script要素で読みだすaudio.min.jsのパスも変更してください。
-                    指定しなかった場合は<code>./audio/</code>になります。</dd>
+                    <dd>効果音ファイルが入っているフォルダを指定できます。指定しなかった場合は<code>./audio/</code>になります。</dd>
                     <dt><code>data-wwa-classic-mode-enable</code>属性</dt>
                     <dd><code>true</code>を指定すると、本家と類似した挙動で動作します(詳細は後述)。
                     指定しなかった場合は<code>false</code>になります。</dd>
