--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -129,13 +129,14 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
-                    <h3>v3.2.2からv3.2.10への変更点</h3>
+                    <h3>v3.2.10からv3.2.11への変更点</h3>
                     <ul>
-                        <li>挙動の変更はありません。（CSS開発のscssへの移行, リリースフローの見直し, マニュアル訂正など）</li>
+                        <li><code>$color</code>マクロで背景色が変わらない問題を修正</li>
                     </ul>
-                    <h3>v3.2.1からv3.2.2への変更点</h3>
+                    <h3>v3.2.1からv3.2.10への変更点</h3>
                     <ul>
                         <li><code>$imgframe</code>でアイテムボックスの背景を変更した後、アイテムを取得すると背景が一瞬デフォルトになる問題を修正</li>
+                        <li>その他、WWAとしての挙動を伴わない変更（CSS開発のscssへの移行, リリースフローの見直し, マニュアル訂正など）</li>
                     </ul>
                     <h3>v3.2.0からv3.2.1への変更点</h3>
                     <ul>
