--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -129,6 +129,14 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.2.11からv3.3.0への変更点</h3>
+                    <ul>
+                        <li>Quick Saveによるセーブ枠を1つから4つに変更</li>
+                        <li>戦闘終了後のメッセージ表示までに使用型アイテムのマクロのイベントが割り込める不具合の修正</li>
+                        <li>ゲームパッドのボタン 2 を押した時にヘルプを表示する機能を実装</li>
+                        <li>戦闘時にゲームパッドが振動する機能を実装</li>
+                        <li>ゲームパッドのボタンと、アイテムボックスの特定の枠を割り当てるマクロ<code>$gamepad_button</code>の追加</li>
+                    </ul>
                     <h3>v3.2.10からv3.2.11への変更点</h3>
                     <ul>
                         <li><code>$color</code>マクロで背景色が変わらない問題を修正</li>
@@ -334,9 +342,9 @@
                 OSは不問です。
                 <ul>
                     <li>Microsoft Internet Explorer 11</li>
-                    <li>Microsoft Edge (最新版)</li>
+                    <li>Microsoft Edge (EdgeHTML 18) ※Microsoft社から、Chromium版Edgeへの自動アップデートが提供され次第サポート終了予定</li>
                     <li>Mozilla Firefox (最新版)</li>
-                    <li>Google Chrome/Chromium (最新版)</li>
+                    <li>Google Chrome/Chromium (最新版) ※Microsoft Edgeの最新版を含む</li>
                     <li>Safari (最新版)</li>
                 </ul>
                 <h3>スマートフォン・タブレット</h3>
@@ -346,22 +354,6 @@
                 </ul>
             </section>
             
-            <section>
-                <h2>次回予定</h2>
-                <p>本家実装が一段落したので、もう少し考えてみることにします。</p>
-                <section>
-                    <h3>遠くない未来に更新予定</h3>
-                    <ul>
-                        <li>SuperQuickSave(仮)</li>
-                        <li>超高速戦闘</li>
-                        <li>スコア表示Twitter連携機能</li>
-                        <li>スマートフォン・タブレット向けゲームパッド</li>
-                        <li>スマートフォン・タブレット向けviewport設定</li>
-                        <li>その他、提案された多数の新機能</li>
-                    </ul>
-                </section>
-            </section>
-
             <footer>
                 <h2>ライセンス情報</h2>
                 <p>WWA Wingのソースコードの使用の制限については<a href="./LICENSE">MIT License</a>とします。</p>
@@ -372,7 +364,7 @@
                 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.ja"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br />
                 また、このマニュアルについては <a rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.ja">クリエイティブ・コモンズ 表示 4.0 国際 ライセンスの下に提供されています。</a></p>
                 <p> Internet RPG &quot;<a href="http://www.wwajp.com">World Wide Adventure</a>&quot; &copy;1996-2016 NAO</p>
-                <p> &quot;<a href="http://wwawing.com/">WWA Wing</a>&quot; &copy;2013-2019 WWA Wing Team</p>
+                <p> &quot;<a href="http://wwawing.com/">WWA Wing</a>&quot; &copy;2013-2020 WWA Wing Team</p>
             </footer>
         </section>
     </div>
