--- a/packages/assets/html/manual.html
+++ b/packages/assets/html/manual.html
@@ -128,6 +128,18 @@
             <section>
                 <h2>更新情報</h2>
                 <section>
+                    <h3>v3.3.1からv3.4.0への変更点</h3>
+                    <p class="important">wwaload.js と data-wwa-loader 属性は廃止され、機能は wwa.js 内に統合されました。</p>
+                    <p class="important">v3.4.0以降にアップデート後、wwaload.js と HTML中のdata-wwa-loader 属性は放っておいても動作に支障はありませんし、消してしまっても問題ありません。</p>
+                    <ul>
+                        <li>プレイヤーの方向変更機能を追加: キーボード Esc/N/Shift のいずれか + 方向キー / ゲームパッド のボタン 0 + 方向キーで、移動せずにプレイヤーの向きを変えることができます。</li>
+                        <li><code>$data-wwa-looking-around</code>属性を追加。<code>false</code>を与えることで無操作時にプレイヤーが回る仕様を回避することができます。</li>
+                        <li>マクロ<code>$imgframe</code>, <code>$imgbom</code>で指定された「枠」「ステータスアイコン」「戦闘エフェクト」の画像指定がセーブデータに保存されるように変更。</li>
+                        <li>wwaload.js を廃止し、機能を wwa.js へ統合。</li>
+                        <li>ヘルプ画面にプレイ時間を追加</li>
+                        <li>スマートフォン環境で、サウンド自動読み込み設定のマップデータの場合に「ゲームを開始します。」の表記を復活。</li>
+                        <li>存在しない効果音が指定されているパーツに触れた後にBGMが変更された場合にBGMが2重に再生される不具合を修正。</li>
+                    </ul>
                     <h3>v3.3.0からv3.3.1への変更点</h3>
                     <ul>
                         <li>F8 キー で WWA の公式サイトを開く機能が使えなくなっていたのを修正</li>
